--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -78,7 +78,7 @@
   <!-- Infographic Carousel -->
   <section style="padding: 2rem 1rem; max-width: 900px; margin: auto;">
     <h2>Visual Infographic</h2>
-    <img src="anti-cancer-tea-banner.png" alt="Anti-Cancer Tea Infographic" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+    <img src="1000006903.jpg" alt="Anti-Cancer Tea Infographic" style="max-width: 100%; height: auto;" />
   </section>
 
   <!-- Footer -->
