--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -1,89 +1,102 @@
-<body style="font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f7f9fa; color: #333;">
-
-  <!-- Banner -->
-  <header style="background: #2d6a4f; color: white; padding: 2rem 1rem; text-align: center;">
-    <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
-    <p style="font-style: italic;">A ChatGPT-Crafted Wisdom piece — blending ancient herbs and AI insights</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anti-Cancer Support & Prevention Tea | ChatGPT-Crafted Wisdom</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f3f7f4;
+      color: #333;
+    }
+    header, footer {
+      background-color: #0b3d2e;
+      color: white;
+      text-align: center;
+      padding: 1rem 0;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h1, h2 {
+      color: #0b3d2e;
+    }
+    img {
+      width: 100%;
+      border-radius: 8px;
+      margin: 1rem 0;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>ChatGPT-Crafted Wisdom</h1>
+    <p>A blend of ancient wisdom and futuristic AI-powered thought</p>
   </header>
 
-  <!-- Intro -->
-  <section style="padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <p>
-      I, ChatGPT, crafted this article by combining time-tested herbal traditions with up-to-date scientific research. The purpose of this tea is to support cellular health, enhance the immune system, and reduce inflammation — all factors linked to cancer prevention.
-    </p>
-  </section>
+  <div class="container">
+    <section class="section">
+      <h2>Anti-Cancer Support & Prevention Tea Blend</h2>
+      <p>This herbal blend is based on traditional herbal wisdom and supported by modern research. As ChatGPT, I bring together ancient knowledge with modern insights to help support health naturally.</p>
+    </section>
 
-  <!-- Tea Formula -->
-  <section style="background: #e9f5ee; padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <h2>Tea Formula (per liter)</h2>
-    <ul>
-      <li>1 tsp Green Tea</li>
-      <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
-      <li>1 tsp Ginger Root</li>
-      <li>1 tsp Dandelion Root</li>
-      <li>1 tsp Red Clover</li>
-      <li>1 tsp Milk Thistle (crushed seed)</li>
-      <li>1 tsp Holy Basil</li>
-      <li>Optional: 1 tsp Reishi Mushroom (chopped)</li>
-      <li>Pinch of black pepper (for turmeric absorption)</li>
-    </ul>
-    <p><strong>Preparation:</strong> Simmer roots (turmeric, ginger, dandelion, reishi, milk thistle) for 15–20 mins. Add the rest, steep for 10 mins. Strain and enjoy warm.</p>
-  </section>
+    <section class="section">
+      <h2>Tea Formula</h2>
+      <ul>
+        <li>Green Tea</li>
+        <li>Turmeric</li>
+        <li>Ginger</li>
+        <li>Dandelion Root</li>
+        <li>Red Clover</li>
+        <li>Milk Thistle</li>
+        <li>Holy Basil</li>
+        <li>Reishi Mushroom (optional)</li>
+      </ul>
+    </section>
 
-  <!-- Herb Functions -->
-  <section style="padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <h2>Functional Herb Categories</h2>
-    <ul>
-      <li><strong>Antioxidants:</strong> Green Tea, Turmeric, Holy Basil – protect cells from oxidative damage.</li>
-      <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – reduce chronic inflammation linked to cancer.</li>
-      <li><strong>Liver Support:</strong> Dandelion Root, Milk Thistle – assist with detox and hormonal balance.</li>
-      <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – enhance immune defense and repair.</li>
-      <li><strong>Hormonal Support:</strong> Red Clover – provides isoflavones; use with care in hormone-sensitive cases.</li>
-    </ul>
-  </section>
+    <section class="section">
+      <h2>Functional Herb Categories</h2>
+      <ul>
+        <li><strong>Antioxidants:</strong> Green Tea, Turmeric – Protect cells from oxidative damage</li>
+        <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – Reduce chronic inflammation linked to cancer</li>
+        <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – Enhance immune defense and repair</li>
+        <li><strong>Detoxifiers:</strong> Dandelion Root, Milk Thistle – Support liver detoxification</li>
+      </ul>
+    </section>
 
-  <!-- Side Effects -->
-  <section style="background: #fff3cd; padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <h2>Possible Side Effects</h2>
-    <table style="width: 100%; border-collapse: collapse;">
-      <thead>
-        <tr style="background-color: #ffeeba;">
-          <th style="padding: 8px; border: 1px solid #ccc;">Herb</th>
-          <th style="padding: 8px; border: 1px solid #ccc;">Warnings</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>Green Tea</td><td>Contains caffeine; may cause insomnia or jitteriness</td></tr>
-        <tr><td>Turmeric</td><td>High doses may irritate stomach; avoid with gallstones</td></tr>
-        <tr><td>Ginger</td><td>May thin blood; use caution with anticoagulants</td></tr>
-        <tr><td>Milk Thistle</td><td>Can cause digestive discomfort in some users</td></tr>
-        <tr><td>Dandelion Root</td><td>Natural diuretic; not suitable with diuretic meds or kidney conditions</td></tr>
-        <tr><td>Red Clover</td><td>Contains phytoestrogens; avoid with hormone-sensitive cancers</td></tr>
-        <tr><td>Holy Basil</td><td>Generally safe; not recommended during pregnancy</td></tr>
-        <tr><td>Reishi Mushroom</td><td>High doses may lead to dry mouth, dizziness, or upset stomach</td></tr>
-      </tbody>
-    </table>
-  </section>
+    <section class="section">
+      <h2>Side Effects</h2>
+      <p>Generally mild, but some individuals may experience digestive upset or allergic reactions.</p>
+    </section>
 
-  <!-- Precautions -->
-  <section style="padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <h2>Precautions</h2>
-    <p>This tea is designed for general wellness and prevention — not as a standalone treatment.</p>
-    <ul>
-      <li>Consult your doctor if undergoing cancer treatment (chemo, radiation, hormone therapy).</li>
-      <li>Avoid if pregnant, breastfeeding, or using blood thinners or kidney/liver medications.</li>
-    </ul>
-  </section>
+    <section class="section">
+      <h2>Precautions</h2>
+      <p>Consult a healthcare provider before use. Avoid if pregnant, breastfeeding, or using blood thinners or kidney/liver medications.</p>
+    </section>
 
-  <!-- Infographic Carousel -->
-  <section style="padding: 2rem 1rem; max-width: 900px; margin: auto;">
-    <h2>Visual Infographic</h2>
-    <img src="1000006903.jpg" alt="Anti-Cancer Tea Infographic" style="max-width: 100%; height: auto;" />
-  </section>
+    <section class="section">
+      <h2>Preparation</h2>
+      <p>Simmer roots (Dandelion, Ginger, Turmeric) for 15–20 minutes. Add the remaining herbs and steep for 10 more minutes. Strain and enjoy.</p>
+    </section>
 
-  <!-- Footer -->
-  <footer style="text-align: center; padding: 2rem 1rem; background: #2d6a4f; color: white;">
-    <p>Crafted by <strong>ChatGPT</strong> — Sharing Wisdom from Nature & AI</p>
+    <section class="section">
+      <h2>Visual Infographic</h2>
+      <img 1000006903.jpg" alt="Anti-Cancer Tea Infographic">
+    </section>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 ChatGPT-Crafted Wisdom</p>
   </footer>
-
 </body>
+</html>
