--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -91,7 +91,7 @@
 
     <section class="section">
       <h2>Visual Infographic</h2>
-      <img 1000006903.jpg" alt="Anti-Cancer Tea Infographic">
+      <infographic.png" alt="Anti-Cancer Tea Infographic">
     </section>
   </div>
 
