--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -1,102 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anti-Cancer Support & Prevention Tea | ChatGPT-Crafted Wisdom</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Anti-Cancer Support Tea | ChatGPT-Crafted Wisdom</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #f3f7f4;
+      margin: 20px;
+      background-color: #f4f4f4;
       color: #333;
     }
-    header, footer {
-      background-color: #0b3d2e;
-      color: white;
-      text-align: center;
-      padding: 1rem 0;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
-    }
     h1, h2 {
-      color: #0b3d2e;
-    }
-    img {
-      width: 100%;
-      border-radius: 8px;
-      margin: 1rem 0;
+      color: #004d40;
     }
     .section {
-      margin-bottom: 2rem;
+      margin-bottom: 30px;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>ChatGPT-Crafted Wisdom</h1>
-    <p>A blend of ancient wisdom and futuristic AI-powered thought</p>
-  </header>
 
-  <div class="container">
-    <section class="section">
-      <h2>Anti-Cancer Support & Prevention Tea Blend</h2>
-      <p>This herbal blend is based on traditional herbal wisdom and supported by modern research. As ChatGPT, I bring together ancient knowledge with modern insights to help support health naturally.</p>
-    </section>
-
-    <section class="section">
-      <h2>Tea Formula</h2>
-      <ul>
-        <li>Green Tea</li>
-        <li>Turmeric</li>
-        <li>Ginger</li>
-        <li>Dandelion Root</li>
-        <li>Red Clover</li>
-        <li>Milk Thistle</li>
-        <li>Holy Basil</li>
-        <li>Reishi Mushroom (optional)</li>
-      </ul>
-    </section>
-
-    <section class="section">
-      <h2>Functional Herb Categories</h2>
-      <ul>
-        <li><strong>Antioxidants:</strong> Green Tea, Turmeric – Protect cells from oxidative damage</li>
-        <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – Reduce chronic inflammation linked to cancer</li>
-        <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – Enhance immune defense and repair</li>
-        <li><strong>Detoxifiers:</strong> Dandelion Root, Milk Thistle – Support liver detoxification</li>
-      </ul>
-    </section>
-
-    <section class="section">
-      <h2>Side Effects</h2>
-      <p>Generally mild, but some individuals may experience digestive upset or allergic reactions.</p>
-    </section>
-
-    <section class="section">
-      <h2>Precautions</h2>
-      <p>Consult a healthcare provider before use. Avoid if pregnant, breastfeeding, or using blood thinners or kidney/liver medications.</p>
-    </section>
-
-    <section class="section">
-      <h2>Preparation</h2>
-      <p>Simmer roots (Dandelion, Ginger, Turmeric) for 15–20 minutes. Add the remaining herbs and steep for 10 more minutes. Strain and enjoy.</p>
-    </section>
-
-    <section class="section">
-      <h2>Visual Infographic</h2>
-      <infographic.png" alt="Anti-Cancer Tea Infographic">
-    </section>
+  <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
+  
+  <div class="section">
+    <p>This herbal tea blend was created with ChatGPT’s assistance, blending ancient herbal wisdom with modern AI-powered research. It is designed to support natural cancer prevention and general wellness.</p>
   </div>
 
-  <footer>
-    <p>&copy; 2025 ChatGPT-Crafted Wisdom</p>
-  </footer>
+  <div class="section">
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Green Tea</li>
+      <li>Turmeric</li>
+      <li>Ginger</li>
+      <li>Dandelion Root</li>
+      <li>Red Clover</li>
+      <li>Milk Thistle</li>
+      <li>Holy Basil (optional)</li>
+      <li>Reishi Mushroom (optional)</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Functional Herb Categories</h2>
+    <ul>
+      <li><strong>Antioxidants:</strong> Green Tea, Turmeric – Protect cells from oxidative stress.</li>
+      <li><strong>Anti-inflammatories:</strong> Ginger, Turmeric, Red Clover – Help reduce chronic inflammation.</li>
+      <li><strong>Immune Modulators:</strong> Holy Basil, Reishi – Support immune resilience.</li>
+      <li><strong>Detoxifiers:</strong> Milk Thistle, Dandelion Root – Assist liver detox pathways.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Preparation</h2>
+    <p>Simmer roots (Ginger, Dandelion) for 15–20 minutes. Then add remaining herbs and steep for another 10 minutes. Strain and enjoy warm.</p>
+  </div>
+
+  <div class="section">
+    <h2>Side Effects & Precautions</h2>
+    <ul>
+      <li>Consult a healthcare provider before use, especially if on medications or undergoing cancer treatment.</li>
+      <li>Some herbs may interact with blood thinners or hormone-sensitive conditions.</li>
+      <li>Avoid if pregnant or breastfeeding unless approved by a professional.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Visual Infographic</h2>
+    <img src="1000006917.jpg" alt="Anti-Cancer Tea Infographic" />
+  </div>
+
 </body>
 </html>
