--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -2,79 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anti-Cancer Support Tea | ChatGPT-Crafted Wisdom</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    h1, h2 {
-      color: #004d40;
-    }
-    .section {
-      margin-bottom: 30px;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
+    <p>Created with the help of ChatGPT | Part of the ChatGPT-Crafted Wisdom Series</p>
+  </header>
 
-  <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
-  
-  <div class="section">
-    <p>This herbal tea blend was created with ChatGPT’s assistance, blending ancient herbal wisdom with modern AI-powered research. It is designed to support natural cancer prevention and general wellness.</p>
-  </div>
+  <section class="intro">
+    <h2>Introduction</h2>
+    <p>This herbal tea blend is based on traditional herbal wisdom and supported by modern clinical research. Designed to support the immune system, deliver antioxidant benefits, and promote cellular wellness, this tea combines powerful herbs used for centuries in holistic medicine. The content was created with the assistance of ChatGPT, drawing on peer-reviewed studies and expert herbal references such as <em>Medical Herbalism</em> by David Hoffmann and research indexed in PubMed.</p>
+  </section>
 
-  <div class="section">
-    <h2>Ingredients</h2>
+  <section class="formula">
+    <h2>Tea Formula (Per Liter)</h2>
     <ul>
-      <li>Green Tea</li>
-      <li>Turmeric</li>
-      <li>Ginger</li>
-      <li>Dandelion Root</li>
-      <li>Red Clover</li>
-      <li>Milk Thistle</li>
-      <li>Holy Basil (optional)</li>
-      <li>Reishi Mushroom (optional)</li>
+      <li>1 tsp Green Tea</li>
+      <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
+      <li>1 tsp Ginger Root</li>
+      <li>1 tsp Dandelion Root</li>
+      <li>1 tsp Holy Basil (Tulsi)</li>
+      <li>1 tsp Red Clover</li>
+      <li>1 tsp Milk Thistle Seed (crushed)</li>
+      <li>Optional: 1 tsp Reishi Mushroom (dried, chopped)</li>
+      <li>+ Pinch of black pepper (to enhance turmeric absorption)</li>
     </ul>
-  </div>
+    <p><strong>Instructions:</strong> Simmer roots (ginger, turmeric, dandelion, reishi, milk thistle) for 15–20 minutes. Add green tea, red clover, tulsi — steep for 10 more minutes. Strain and enjoy warm.</p>
+    <p><strong>Recommended:</strong> 1–2 cups daily, fresh-brewed. Avoid during pregnancy or while on medications without professional guidance.</p>
+  </section>
 
-  <div class="section">
+  <section class="functions">
     <h2>Functional Herb Categories</h2>
+    <h3>1. Antioxidant-Rich Herbs</h3>
+    <p>Green Tea, Turmeric, Holy Basil — help neutralize free radicals and protect cellular health.</p>
+    <h3>2. Anti-Inflammatory Herbs</h3>
+    <p>Turmeric, Ginger, Red Clover — reduce systemic inflammation linked to chronic disease.</p>
+    <h3>3. Liver-Supportive Herbs</h3>
+    <p>Dandelion Root, Milk Thistle — assist detoxification and hormonal balance.</p>
+    <h3>4. Immune-Modulating Herbs</h3>
+    <p>Holy Basil, Reishi Mushroom — adaptogenic support for stress and immune health.</p>
+    <h3>5. Hormonal Balance</h3>
+    <p>Red Clover — supports natural hormonal harmony (with caution in hormone-sensitive cases).</p>
+  </section>
+
+  <section class="side-effects">
+    <h2>Possible Side Effects</h2>
     <ul>
-      <li><strong>Antioxidants:</strong> Green Tea, Turmeric – Protect cells from oxidative stress.</li>
-      <li><strong>Anti-inflammatories:</strong> Ginger, Turmeric, Red Clover – Help reduce chronic inflammation.</li>
-      <li><strong>Immune Modulators:</strong> Holy Basil, Reishi – Support immune resilience.</li>
-      <li><strong>Detoxifiers:</strong> Milk Thistle, Dandelion Root – Assist liver detox pathways.</li>
+      <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia.</li>
+      <li><strong>Turmeric:</strong> May cause stomach irritation in high doses; avoid with gallstones.</li>
+      <li><strong>Ginger:</strong> May thin blood; use caution with anticoagulants.</li>
+      <li><strong>Milk Thistle:</strong> Can cause bloating or digestive upset.</li>
+      <li><strong>Dandelion Root:</strong> Acts as a diuretic; not suitable for those on diuretics or with kidney issues.</li>
+      <li><strong>Red Clover:</strong> Contains phytoestrogens; avoid with hormone-sensitive conditions.</li>
+      <li><strong>Holy Basil:</strong> Generally safe; avoid during pregnancy without consultation.</li>
+      <li><strong>Reishi Mushroom:</strong> In high amounts, may cause dry mouth, dizziness, or upset stomach.</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>Preparation</h2>
-    <p>Simmer roots (Ginger, Dandelion) for 15–20 minutes. Then add remaining herbs and steep for another 10 minutes. Strain and enjoy warm.</p>
-  </div>
-
-  <div class="section">
-    <h2>Side Effects & Precautions</h2>
+  <section class="precautions">
+    <h2>Precautions</h2>
+    <p>This tea is for general wellness and prevention, not a substitute for medical treatment. Consult a healthcare provider before use if you are:</p>
     <ul>
-      <li>Consult a healthcare provider before use, especially if on medications or undergoing cancer treatment.</li>
-      <li>Some herbs may interact with blood thinners or hormone-sensitive conditions.</li>
-      <li>Avoid if pregnant or breastfeeding unless approved by a professional.</li>
+      <li>Undergoing cancer treatment (chemotherapy, radiation, hormone therapy)</li>
+      <li>Taking blood thinners or medications affecting the liver or kidneys</li>
+      <li>Pregnant or breastfeeding</li>
     </ul>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>Visual Infographic</h2>
-    <img src="1000006917.jpg" alt="Anti-Cancer Tea Infographic" />
-  </div>
+  <section class="carousel">
+    <h2>Visual Guide</h2>
+    <p>Scroll through our <strong>infographic carousel</strong> below for a visual summary of this tea’s benefits.</p>
+    <img src="1000006917.jpg" alt="Anti-Cancer Tea Infographic" style="max-width:100%; height:auto;" />
+  </section>
 
+  <footer>
+    <p>&copy; 2025 ChatGPT-Crafted Wisdom. Created using AI and human curiosity.</p>
+  </footer>
 </body>
 </html>
