--- a/anti-cancer-tea.html
+++ b/anti-cancer-tea.html
@@ -4,82 +4,143 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anti-Cancer Support Tea | ChatGPT-Crafted Wisdom</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5fcf8;
+      color: #2e3b2e;
+    }
+    header {
+      background-color: #81c784;
+      padding: 30px 20px;
+      text-align: center;
+      color: #fff;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    section {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 20px;
+    }
+    h2 {
+      color: #388e3c;
+      border-bottom: 2px solid #c8e6c9;
+      padding-bottom: 5px;
+    }
+    .highlight-box {
+      background-color: #e8f5e9;
+      padding: 15px;
+      border-radius: 8px;
+      margin: 15px 0;
+      border-left: 6px solid #66bb6a;
+    }
+    .image-container {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .image-container img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      background-color: #388e3c;
+      color: #fff;
+      text-align: center;
+      padding: 15px 10px;
+      margin-top: 40px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 8px;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
-    <p>Created with the help of ChatGPT | Part of the ChatGPT-Crafted Wisdom Series</p>
+    <p>A ChatGPT-Crafted Wisdom Article | A blend of ancient herbal knowledge and AI insight</p>
   </header>
 
-  <section class="intro">
+  <section>
     <h2>Introduction</h2>
-    <p>This herbal tea blend is based on traditional herbal wisdom and supported by modern clinical research. Designed to support the immune system, deliver antioxidant benefits, and promote cellular wellness, this tea combines powerful herbs used for centuries in holistic medicine. The content was created with the assistance of ChatGPT, drawing on peer-reviewed studies and expert herbal references such as <em>Medical Herbalism</em> by David Hoffmann and research indexed in PubMed.</p>
+    <p>This thoughtfully crafted tea blend combines time-honored herbal wisdom with modern research, supporting your body’s defense systems through powerful, natural ingredients.</p>
   </section>
 
-  <section class="formula">
-    <h2>Tea Formula (Per Liter)</h2>
-    <ul>
-      <li>1 tsp Green Tea</li>
-      <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
-      <li>1 tsp Ginger Root</li>
-      <li>1 tsp Dandelion Root</li>
-      <li>1 tsp Holy Basil (Tulsi)</li>
-      <li>1 tsp Red Clover</li>
-      <li>1 tsp Milk Thistle Seed (crushed)</li>
-      <li>Optional: 1 tsp Reishi Mushroom (dried, chopped)</li>
-      <li>+ Pinch of black pepper (to enhance turmeric absorption)</li>
-    </ul>
-    <p><strong>Instructions:</strong> Simmer roots (ginger, turmeric, dandelion, reishi, milk thistle) for 15–20 minutes. Add green tea, red clover, tulsi — steep for 10 more minutes. Strain and enjoy warm.</p>
-    <p><strong>Recommended:</strong> 1–2 cups daily, fresh-brewed. Avoid during pregnancy or while on medications without professional guidance.</p>
+  <section>
+    <h2>Suggested Tea Formula (Per Liter)</h2>
+    <div class="highlight-box">
+      <ul>
+        <li>1 tsp Green Tea</li>
+        <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
+        <li>1 tsp Ginger Root</li>
+        <li>1 tsp Dandelion Root</li>
+        <li>1 tsp Holy Basil (Tulsi)</li>
+        <li>1 tsp Red Clover</li>
+        <li>1 tsp Milk Thistle Seed (crushed)</li>
+        <li>Optional: 1 tsp Reishi Mushroom (dried, chopped)</li>
+        <li>+ Pinch of black pepper to enhance turmeric absorption</li>
+      </ul>
+      <p><strong>Preparation:</strong> Simmer roots (ginger, turmeric, dandelion, reishi, milk thistle) for 15–20 minutes. Then add green tea, red clover, tulsi and steep 10 more minutes. Strain and enjoy warm.</p>
+    </div>
   </section>
 
-  <section class="functions">
+  <section>
     <h2>Functional Herb Categories</h2>
-    <h3>1. Antioxidant-Rich Herbs</h3>
-    <p>Green Tea, Turmeric, Holy Basil — help neutralize free radicals and protect cellular health.</p>
-    <h3>2. Anti-Inflammatory Herbs</h3>
-    <p>Turmeric, Ginger, Red Clover — reduce systemic inflammation linked to chronic disease.</p>
-    <h3>3. Liver-Supportive Herbs</h3>
-    <p>Dandelion Root, Milk Thistle — assist detoxification and hormonal balance.</p>
-    <h3>4. Immune-Modulating Herbs</h3>
-    <p>Holy Basil, Reishi Mushroom — adaptogenic support for stress and immune health.</p>
-    <h3>5. Hormonal Balance</h3>
-    <p>Red Clover — supports natural hormonal harmony (with caution in hormone-sensitive cases).</p>
+    <ul>
+      <li><strong>Antioxidants:</strong> Green Tea, Turmeric, Holy Basil – Protects cells from oxidative stress</li>
+      <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – Reduces chronic inflammation</li>
+      <li><strong>Liver Support:</strong> Dandelion Root, Milk Thistle – Promotes detoxification</li>
+      <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – Enhances immune defense</li>
+      <li><strong>Hormonal Support:</strong> Red Clover – Plant-based isoflavones (used with caution)</li>
+    </ul>
   </section>
 
-  <section class="side-effects">
+  <section>
     <h2>Possible Side Effects</h2>
     <ul>
-      <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia.</li>
-      <li><strong>Turmeric:</strong> May cause stomach irritation in high doses; avoid with gallstones.</li>
-      <li><strong>Ginger:</strong> May thin blood; use caution with anticoagulants.</li>
-      <li><strong>Milk Thistle:</strong> Can cause bloating or digestive upset.</li>
-      <li><strong>Dandelion Root:</strong> Acts as a diuretic; not suitable for those on diuretics or with kidney issues.</li>
-      <li><strong>Red Clover:</strong> Contains phytoestrogens; avoid with hormone-sensitive conditions.</li>
-      <li><strong>Holy Basil:</strong> Generally safe; avoid during pregnancy without consultation.</li>
-      <li><strong>Reishi Mushroom:</strong> In high amounts, may cause dry mouth, dizziness, or upset stomach.</li>
+      <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia</li>
+      <li><strong>Turmeric:</strong> May cause stomach irritation; avoid with gallstones</li>
+      <li><strong>Ginger:</strong> Blood-thinning; caution with anticoagulants</li>
+      <li><strong>Milk Thistle:</strong> May cause bloating or mild digestive upset</li>
+      <li><strong>Dandelion Root:</strong> Natural diuretic; not ideal for those on diuretics or with kidney conditions</li>
+      <li><strong>Red Clover:</strong> Phytoestrogens; caution with hormone-sensitive conditions</li>
+      <li><strong>Holy Basil:</strong> Generally safe; avoid in pregnancy without consultation</li>
+      <li><strong>Reishi Mushroom:</strong> In large doses may cause dry mouth, dizziness, or upset stomach</li>
     </ul>
   </section>
 
-  <section class="precautions">
+  <section>
     <h2>Precautions</h2>
-    <p>This tea is for general wellness and prevention, not a substitute for medical treatment. Consult a healthcare provider before use if you are:</p>
+    <p>This tea is intended for wellness and prevention. Consult a healthcare professional if you:</p>
     <ul>
-      <li>Undergoing cancer treatment (chemotherapy, radiation, hormone therapy)</li>
-      <li>Taking blood thinners or medications affecting the liver or kidneys</li>
-      <li>Pregnant or breastfeeding</li>
+      <li>Are undergoing cancer treatment</li>
+      <li>Are pregnant or breastfeeding</li>
+      <li>Take blood thinners or liver/kidney medications</li>
     </ul>
   </section>
 
-  <section class="carousel">
-    <h2>Visual Guide</h2>
-    <p>Scroll through our <strong>infographic carousel</strong> below for a visual summary of this tea’s benefits.</p>
-    <img src="1000006917.jpg" alt="Anti-Cancer Tea Infographic" style="max-width:100%; height:auto;" />
+  <section>
+    <h2>Infographic</h2>
+    <div class="image-container">
+      <img src="1000006917.jpg" alt="Anti-Cancer Support Tea Infographic" />
+    </div>
+  </section>
+
+  <section>
+    <h2>How This Formula Was Created</h2>
+    <p>This blend was crafted with the assistance of ChatGPT, drawing from trusted herbal sources like “Medical Herbalism” by David Hoffmann, clinical studies from PubMed, and respected traditions in Ayurveda and Western herbal medicine.</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 ChatGPT-Crafted Wisdom. Created using AI and human curiosity.</p>
+    <p>Crafted with AI + Herbal Wisdom | ChatGPT-Crafted Wisdom © 2025</p>
   </footer>
 </body>
 </html>
