--- a/index.html
+++ b/index.html
@@ -57,4 +57,10 @@
         &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
     </footer>
 </body>
+    <p>
+  <a href="fire-carrier-beautiful.html" style="font-weight: bold; font-size: 1.2rem;">
+    Read: The Fire Carrier — a poetic story
+  </a>
+</p>
+
 </html>
