--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,6 +28,14 @@
         h1, h2 {
             color: #0a9396;
         }
+        a {
+            color: #bb3e03;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
         footer {
             text-align: center;
             padding: 1rem;
@@ -52,15 +59,14 @@
             <p>Discover a research-informed herbal tea blend designed to support wellness and potentially reduce cancer risk through antioxidant, anti-inflammatory, and immune-boosting ingredients.</p>
             <a href="anti-cancer-tea.html">Read the full article &rarr;</a>
         </section>
+        <section>
+            <h2>Featured Story: The Fire Carrier</h2>
+            <p>A poetic, spiritual story for those who walk between worlds—burning brightly and learning to carry their inner fire with grace.</p>
+            <a href="fire-carrier-beautiful.html">Read: The Fire Carrier &rarr;</a>
+        </section>
     </main>
     <footer>
         &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
     </footer>
 </body>
-    <p>
-  <a href="fire-carrier-beautiful.html" style="font-weight: bold; font-size: 1.2rem;">
-    Read: The Fire Carrier — a poetic story
-  </a>
-</p>
-
 </html>
