--- a/fire-carrier-beautiful.html
+++ b/fire-carrier-beautiful.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Fire Carrier</title>
+  <title>The Fire Carrier | ChatGPT-Crafted Wisdom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
@@ -11,13 +10,33 @@
       font-family: 'Open Sans', sans-serif;
       background: linear-gradient(to bottom right, #f9f4ef, #f1e9df);
       color: #2c2c2c;
-      padding: 3rem 1rem;
+      padding: 0;
+      margin: 0;
+    }
+    header {
+      background: #005f73;
+      color: #fff;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1rem;
+    }
+    main {
+      padding: 3rem 1.5rem;
       max-width: 860px;
       margin: auto;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      background-color: rgba(255, 255, 255, 0.9);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
       border-radius: 12px;
     }
-    h1 {
+    h1.story-title {
       font-family: 'Playfair Display', serif;
       text-align: center;
       font-size: 3rem;
@@ -35,6 +54,7 @@
     p {
       margin-bottom: 1.5rem;
       font-size: 1.1rem;
+      line-height: 1.8;
     }
     strong {
       color: #c45a2e;
@@ -54,82 +74,98 @@
       border-top: 1px dashed #c4b7ac;
       margin: 3rem 0;
     }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #94d2bd;
+      color: #001219;
+      margin-top: 3rem;
+    }
   </style>
 </head>
 <body>
-  <h1>The Fire Carrier</h1>
-  <em>—a poetic story for anyone who feels deeply, burns brightly, and walks between worlds—</em>
+  <header>
+    <h1>ChatGPT-Crafted Wisdom</h1>
+    <p>A blend of ancient wisdom and futuristic AI-powered thought.</p>
+  </header>
+  <main>
+    <h1 class="story-title">The Fire Carrier</h1>
+    <em>—a poetic story for anyone who feels deeply, burns brightly, and walks between worlds—</em>
 
-  <p>In the beginning, before the world had names,<br>
-  there was a child born with <strong>fire in their chest</strong>.</p>
+    <p>In the beginning, before the world had names,<br>
+    there was a child born with <strong>fire in their chest</strong>.</p>
 
-  <p>Not the kind that burns houses—<br>
-  but the kind that made stars.</p>
+    <p>Not the kind that burns houses—<br>
+    but the kind that made stars.</p>
 
-  <p>The elders whispered, “This one is different.”<br>
-  The winds leaned closer when they spoke.<br>
-  The rivers paused to listen.<br>
-  God smiled.</p>
+    <p>The elders whispered, “This one is different.”<br>
+    The winds leaned closer when they spoke.<br>
+    The rivers paused to listen.<br>
+    God smiled.</p>
 
-  <p>This child laughed with thunder in their throat<br>
-  and dreamed in colors the world hadn’t yet invented.<br>
-  They touched joy with bare hands—<br>
-  and it danced.</p>
+    <p>This child laughed with thunder in their throat<br>
+    and dreamed in colors the world hadn’t yet invented.<br>
+    They touched joy with bare hands—<br>
+    and it danced.</p>
 
-  <p>But one day, the fire grew too wild.<br>
-  It surged beyond their ribs and spun them into the sky.<br>
-  They flew too fast. Too far.<br>
-  The stars became sharp. The light turned blinding.<br>
-  Even angels blinked.</p>
+    <p>But one day, the fire grew too wild.<br>
+    It surged beyond their ribs and spun them into the sky.<br>
+    They flew too fast. Too far.<br>
+    The stars became sharp. The light turned blinding.<br>
+    Even angels blinked.</p>
 
-  <p>When they fell,<br>
-  they fell hard.<br>
-  To the ground.<br>
-  To the quiet.<br>
-  To the shadows under their own skin.</p>
+    <p>When they fell,<br>
+    they fell hard.<br>
+    To the ground.<br>
+    To the quiet.<br>
+    To the shadows under their own skin.</p>
 
-  <hr>
+    <hr>
 
-  <p>They thought the fire was gone.</p>
+    <p>They thought the fire was gone.</p>
 
-  <blockquote>
-    “This is not a punishment.”<br>
-    “You were born to carry fire.”<br>
-    “But you must learn to walk with it, not run.”
-  </blockquote>
+    <blockquote>
+      “This is not a punishment.”<br>
+      “You were born to carry fire.”<br>
+      “But you must learn to walk with it, not run.”
+    </blockquote>
 
-  <p>So they began the long walk.</p>
+    <p>So they began the long walk.</p>
 
-  <p>They learned the rhythm of breath,<br>
-  the sacred pause of rest.<br>
-  They carved cups from their hands to hold the flame—<br>
-  not too tight, not too loose.</p>
+    <p>They learned the rhythm of breath,<br>
+    the sacred pause of rest.<br>
+    They carved cups from their hands to hold the flame—<br>
+    not too tight, not too loose.</p>
 
-  <p>They built altars of stability,<br>
-  placed stones of routine,<br>
-  sang songs of self-compassion when the fire whispered lies.</p>
+    <p>They built altars of stability,<br>
+    placed stones of routine,<br>
+    sang songs of self-compassion when the fire whispered lies.</p>
 
-  <p>And slowly—<br>
-  the fire became a companion.<br>
-  Not a master. Not a monster.<br>
-  But a <strong>living light</strong>.</p>
+    <p>And slowly—<br>
+    the fire became a companion.<br>
+    Not a master. Not a monster.<br>
+    But a <strong>living light</strong>.</p>
 
-  <p>Now, when they speak,<br>
-  truth pours like honey and lightning.<br>
-  When they move,<br>
-  the room softens, aware of the heat they carry.<br>
-  And when they cry,<br>
-  even God listens more closely.</p>
+    <p>Now, when they speak,<br>
+    truth pours like honey and lightning.<br>
+    When they move,<br>
+    the room softens, aware of the heat they carry.<br>
+    And when they cry,<br>
+    even God listens more closely.</p>
 
-  <hr>
+    <hr>
 
-  <p>People still ask,<br>
-  “Is it a curse or a blessing?”</p>
+    <p>People still ask,<br>
+    “Is it a curse or a blessing?”</p>
 
-  <blockquote>
-    “It’s both. It’s neither.”<br>
-    “It’s a fire.<br>
-    And I am learning to carry it with grace.”
-  </blockquote>
+    <blockquote>
+      “It’s both. It’s neither.”<br>
+      “It’s a fire.<br>
+      And I am learning to carry it with grace.”
+    </blockquote>
+  </main>
+  <footer>
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+  </footer>
 </body>
 </html>
