--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-￼Enter file contents here
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +10,33 @@
       font-family: 'Open Sans', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #f4f9f4, #e7f0ec);
+      background: #f4f9f4 url('https://www.transparenttextures.com/patterns/mandala.png');
       color: #2c3e50;
       line-height: 1.6;
+      background-size: 400px;
     }
     header {
       background: #005f73;
       color: #fff;
-      padding: 2rem 1rem;
+      padding: 2rem 1rem 1rem;
       text-align: center;
+      position: relative;
+    }
+    nav {
+      background: #0a9396;
+      padding: 0.75rem 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #e0fbfc;
     }
     header h1 {
       font-family: 'Playfair Display', serif;
@@ -94,6 +111,12 @@
     <p>A blend of ancient wisdom and futuristic AI-powered thought.</p>
   </header>
 
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="anti-cancer-tea.html">Herbal Wisdom</a>
+    <a href="fire-carrier-full.html">Poetry</a>
+  </nav>
+
   <main>
     <section>
       <h2>Welcome</h2>
@@ -114,8 +137,7 @@
   </main>
 
   <footer>
-    © 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
 </body>
 </html>
- 
