--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
+      <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI.</p>
     </section>
 
     <section>
