--- a/index.html
+++ b/index.html
@@ -1,145 +1,83 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ChatGPT-Crafted Wisdom</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Open Sans', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f9f4 url('https://www.transparenttextures.com/patterns/mandala.png');
-      color: #2c3e50;
-      line-height: 1.6;
-      background-size: 400px;
-    }
-    header {
-      background: #005f73;
-      color: #fff;
-      padding: 2rem 1rem 1rem;
-      text-align: center;
-      animation: fadeIn 2s ease-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .logo {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.5rem;
-      margin: 0;
-    }
-    nav {
-      background: #0a9396;
-      padding: 0.75rem 1rem;
-      text-align: center;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: bold;
-      font-size: 1rem;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #e0fbfc;
-    }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1.5rem;
-      background: #ffffffcc;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    h2 {
-      color: #0a9396;
-      font-family: 'Playfair Display', serif;
-      font-size: 1.8rem;
-      border-left: 4px solid #94d2bd;
-      padding-left: 0.5rem;
-    }
-    p {
-      font-size: 1.1rem;
-      color: #444;
-    }
-    a {
-      display: inline-block;
-      margin-top: 0.5rem;
-      font-weight: bold;
-      color: #005f73;
-      text-decoration: none;
-      border-bottom: 1px solid transparent;
-      transition: all 0.3s ease;
-    }
-    a:hover {
-      color: #0a9396;
-      border-bottom: 1px solid #0a9396;
-    }
-    .button-link {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
-      background: #94d2bd;
-      color: #001219;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    .button-link:hover {
-      background: #a9dcca;
-    }
-    footer {
-      text-align: center;
-      padding: 1.5rem;
-      background: #94d2bd;
-      color: #001219;
-      margin-top: 2rem;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>ChatGPT-Crafted Wisdom</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Open Sans', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f9f4;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: #005f73;
+            color: #fff;
+            padding: 2rem 1rem;
+            text-align: center;
+        }
+        .logo {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.5rem;
+            color: #fff;
+        }
+        nav a {
+            margin: 0 1rem;
+            color: #e0fbfc;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            padding: 2rem;
+            max-width: 900px;
+            margin: auto;
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        h2 {
+            color: #0a9396;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: #94d2bd;
+            color: #001219;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1 class="logo">ChatGPT-Crafted Wisdom</h1>
-    <p>A blend of ancient wisdom and futuristic AI-powered thought.</p>
-  </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="anti-cancer-tea.html">Herbal Wisdom</a>
-    <a href="fire-carrier-beautiful.html">Poetry</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <main>
-    <section>
-      <h2>Welcome</h2>
-      <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI.</p>
-    </section>
-
-    <section>
-      <h2>Featured Article: Anti-Cancer Herbal Tea</h2>
-      <p>Discover a research-informed herbal tea blend designed to support wellness and potentially reduce cancer risk through antioxidant, anti-inflammatory, and immune-boosting ingredients.</p>
-      <a href="anti-cancer-tea.html">Read the full article →</a>
-    </section>
-
-    <section>
-      <h2>Featured Poem: The Fire Carrier</h2>
-      <p>A poetic story for anyone who feels deeply, burns brightly, and walks between worlds—an allegory for those who carry inner fire and divine purpose.</p>
-      <a class="button-link" href="fire-carrier-beautiful.html">Read The Fire Carrier</a>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
-  </footer>
+    <header>
+        <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" style="max-height: 100px; display: block; margin: 0 auto 0.5rem;">
+        <h1 class="logo">ChatGPT-Crafted Wisdom</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="fire-carrier-beautiful.html">The Fire Carrier</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome</h2>
+            <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
+        </section>
+        <section>
+            <h2>Featured Article: Anti-Cancer Herbal Tea</h2>
+            <p>Discover a research-informed herbal tea blend designed to support wellness and potentially reduce cancer risk through antioxidant, anti-inflammatory, and immune-boosting ingredients.</p>
+            <a href="anti-cancer-tea.html">Read the full article &rarr;</a>
+        </section>
+    </main>
+    <footer>
+        &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+    </footer>
 </body>
 </html>
