--- a/index.html
+++ b/index.html
@@ -1,83 +1,97 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ChatGPT-Crafted Wisdom</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f4f9f4;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background: #005f73;
-            color: #fff;
-            padding: 2rem 1rem;
-            text-align: center;
-        }
-        .logo {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.5rem;
-            color: #fff;
-        }
-        nav a {
-            margin: 0 1rem;
-            color: #e0fbfc;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
-            padding: 2rem;
-            max-width: 900px;
-            margin: auto;
-        }
-        section {
-            margin-bottom: 2rem;
-        }
-        h2 {
-            color: #0a9396;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background: #94d2bd;
-            color: #001219;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ChatGPT-Crafted Wisdom</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background-color: #e9f5f2;
+      color: #00332e;
+    }
+    .logo-container {
+      text-align: center;
+      padding-top: 2rem;
+    }
+    .logo {
+      max-height: 100px;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      background-color: #d5f2ed;
+      padding: 1rem;
+    }
+    nav a {
+      text-decoration: none;
+      color: #004d43;
+      font-weight: bold;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #002621;
+    }
+    main {
+      padding: 3rem 1.5rem;
+      max-width: 800px;
+      margin: auto;
+      text-align: center;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      color: #0a9396;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+    .story-link {
+      font-weight: bold;
+      font-size: 1.1rem;
+      color: #007f5f;
+      text-decoration: none;
+    }
+    .story-link:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #d7f0e9;
+      color: #001219;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" style="max-height: 100px; display: block; margin: 0 auto 0.5rem;">
-        <h1 class="logo">ChatGPT-Crafted Wisdom</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="fire-carrier-beautiful.html">The Fire Carrier</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Welcome</h2>
-            <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
-        </section>
-        <section>
-            <h2>Featured Article: Anti-Cancer Herbal Tea</h2>
-            <p>Discover a research-informed herbal tea blend designed to support wellness and potentially reduce cancer risk through antioxidant, anti-inflammatory, and immune-boosting ingredients.</p>
-            <a href="anti-cancer-tea.html">Read the full article &rarr;</a>
-        </section>
-    </main>
-    <footer>
-        &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
-    </footer>
+  <div class="logo-container">
+    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="wisdom.html">Wisdom</a>
+    <a href="poetry.html">Poetry</a>
+    <a href="herbal.html">Herbal</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main style="background: #ffffffcc; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); padding: 3rem 2rem; margin-top: 2rem;">
+    <h2 style='font-size: 2.2rem; margin-bottom: 1rem;'>Welcome</h2>
+    <p style='font-size: 1.15rem; line-height: 1.8;'>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
+
+    <h2 style='font-size: 2.2rem; margin-top: 3rem; margin-bottom: 1rem;'>Featured Poem</h2>
+    <p style='font-size: 1.15rem; line-height: 1.8;'>A poetic story for those who burn brightly and walk between worlds.</p>
+    <p style='font-size: 1.15rem; line-height: 1.8;'><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
+  </main>
+  <footer>
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+  </footer>
 </body>
 </html>
