--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+￼Enter file contents here
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -12,12 +13,10 @@
       background-color: #e9f5f2;
       color: #00332e;
     }
-    .logo-container {
-      text-align: center;
-      padding-top: 2rem;
-    }
     .logo {
       max-height: 100px;
+      display: block;
+      margin: 0 auto 2rem;
     }
     nav {
       display: flex;
@@ -38,19 +37,23 @@
       color: #002621;
     }
     main {
-      padding: 3rem 1.5rem;
+      background: #ffffffcc;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 3rem 2rem;
       max-width: 800px;
-      margin: auto;
+      margin: 3rem auto;
       text-align: center;
     }
     h2 {
       font-family: 'Playfair Display', serif;
       color: #0a9396;
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin-bottom: 1rem;
     }
     p {
-      font-size: 1.1rem;
+      font-size: 1.15rem;
+      line-height: 1.8;
       margin-bottom: 2rem;
     }
     .story-link {
@@ -71,9 +74,6 @@
   </style>
 </head>
 <body>
-  <div class="logo-container">
-    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
-  </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
@@ -82,14 +82,18 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <main style="background: #ffffffcc; border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); padding: 3rem 2rem; margin-top: 2rem;">
-    <h2 style='font-size: 2.2rem; margin-bottom: 1rem;'>Welcome</h2>
-    <p style='font-size: 1.15rem; line-height: 1.8;'>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
 
-    <h2 style='font-size: 2.2rem; margin-top: 3rem; margin-bottom: 1rem;'>Featured Poem</h2>
-    <p style='font-size: 1.15rem; line-height: 1.8;'>A poetic story for those who burn brightly and walk between worlds.</p>
-    <p style='font-size: 1.15rem; line-height: 1.8;'><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
+  <main>
+    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+
+    <h2>Welcome</h2>
+    <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
+
+    <h2>Featured Poem</h2>
+    <p>A poetic story for those who burn brightly and walk between worlds.</p>
+    <p><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
   </main>
+
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
