--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Index</title>
+  <title>ChatGPT-Crafted Wisdom</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
@@ -16,20 +16,6 @@
       max-height: 120px;
       display: block;
       margin: 0 auto 2rem;
-    }
-    .site-title {
-      text-align: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 2.4rem;
-      color: #004d43;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-      opacity: 0;
-      animation: fadeInTitle 1.5s ease-out forwards;
-    }
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
     }
     nav {
       display: flex;
@@ -54,8 +40,29 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       padding: 3rem 2rem;
-      max-width: 860px;
+      max-width: 800px;
       margin: 3rem auto;
+      text-align: center;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      color: #0a9396;
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.15rem;
+      line-height: 1.8;
+      margin-bottom: 2rem;
+    }
+    .story-link {
+      font-weight: bold;
+      font-size: 1.1rem;
+      color: #007f5f;
+      text-decoration: none;
+    }
+    .story-link:hover {
+      text-decoration: underline;
     }
     footer {
       text-align: center;
@@ -63,7 +70,23 @@
       background: #d7f0e9;
       color: #001219;
     }
-  </style>
+  
+    .site-title {
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 2.4rem;
+      color: #004d43;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+      opacity: 0;
+      animation: fadeInTitle 1.5s ease-out forwards;
+    }
+
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    </style>
 </head>
 <body>
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
@@ -75,17 +98,18 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <main>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
-    
+
     <h2>Welcome</h2>
     <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
 
     <h2>Featured Poem</h2>
     <p>A poetic story for those who burn brightly and walk between worlds.</p>
     <p><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
-  
   </main>
+
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
