--- a/herbal.html
+++ b/herbal.html
@@ -76,6 +76,7 @@
     <a href="contact.html">Contact</a>
   </nav>
   <main>
+    <style>img { max-width: 100%; height: auto; border-radius: 8px; }</style>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
     <header>
     <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
