--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Index</title>
+  <title>ChatGPT-Crafted Wisdom</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
@@ -19,82 +19,4 @@
     }
     .site-title {
       text-align: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 2.4rem;
-      color: #004d43;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-      opacity: 0;
-      animation: fadeInTitle 1.5s ease-out forwards;
-    }
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-      background-color: #d5f2ed;
-      padding: 1rem;
-    }
-    nav a {
-      text-decoration: none;
-      color: #004d43;
-      font-weight: bold;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #002621;
-    }
-    main {
-      background: #ffffffcc;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 3rem 2rem;
-      max-width: 860px;
-      margin: 3rem auto;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #d7f0e9;
-      color: #001219;
-    }
-  </style>
-</head>
-<body>
-  <div class="site-title">ChatGPT-Crafted Wisdom</div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="wisdom.html">Wisdom</a>
-    <a href="poetry.html">Poetry</a>
-    <a href="herbal.html">Herbal</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <main>
-    
-    
-    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
-
-    <h2>Welcome</h2>
-    <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
-
-    <h2>Featured Poem</h2>
-    <p>A poetic story for those who burn brightly and walk between worlds.</p>
-    <p><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
-  
-  
-    <h2 style='font-size: 2.2rem; margin-top: 3rem; margin-bottom: 1rem;'>Featured Herbal Article</h2>
-    <p>An herbal tea blend rooted in research to support healing and well-being.</p>
-    <p><a href="herbal.html" class="story-link">Read: Anti-Cancer Support Tea →</a></p>
-
-  </main>
-  <footer>
-    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
-  </footer>
-</body>
-</html>
+      font
